--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -51,6 +51,7 @@ library(ggiraph)
 library(miniUI)
 library(units)
 library(reactable)
+library(lubridate)
 library(zoo)
 ```
 
@@ -62,6 +63,7 @@ Sonora.DF <- mutate(Sonora.DF, Decesos.diarios= Decesos - lag(Decesos, default =
 Sonora.DF <- mutate(Sonora.DF, Casos.media.7d=round(rollmeanr(x=Casos.diarios, 7, fill = NA),1))
 Sonora.DF <- mutate(Sonora.DF, Decesos.media.7d=round(rollmeanr(x=Decesos.diarios,7, fill=NA),1))
 Sonora.DF <- mutate(Sonora.DF, Pruebas.diarias= Pruebas - lag(Pruebas, default = Pruebas[1]))
+Sonora.DF <- mutate(Sonora.DF, Pruebas.media.7d=round(rollmeanr(x=Pruebas.diarias,7, fill=NA),1))
 Sonora.DF <- mutate(Sonora.DF, Incidencia= round((Confirmados / 30.74745),2))
 Sonora.DF <- mutate(Sonora.DF, Letalidad= round((Decesos / Confirmados)*100,2))
 Sonora.DF <- mutate(Sonora.DF, Mortalidad= round((Decesos / 30.74745)*100,2))
@@ -111,7 +113,7 @@ Row
 CasosSonora = function(...) return(Sonora.dia$Confirmados)
 DecesosSonora = function(...) return(Sonora.dia$Decesos)
 HospSonora = function(...) return(Sonora.dia$Hospitalizados)
-RecuperadosSonora = function(...) return(9490)
+RecuperadosSonora = function(...) return(11056)
 IncidenciaSonora= function(...) return(Sonora.dia$Incidencia)
 LetalidadSonora= function(...) return(Sonora.dia$Letalidad)
 GravedadSonora= function(...) return(Sonora.dia$Gravedad)
@@ -147,11 +149,13 @@ valueBox( Recuperados, icon = "fa-arrow-circle-up", color = "#4F81BD")
 
 Row {data-height=650}
 -----------------------------------------------------------------------
-### **Casos diarios**
+### **Casos confirmados diariamente**
 ```{r, include=FALSE}
 CasosSon <- ggplot(Sonora.DF) +
-  geom_col(aes(x= Fecha, y= Casos.diarios), fill= "#58bcbc", color = "white") +
-   geom_line(aes(x= Fecha, y= Casos.media.7d), color= "#005155", linetype= "solid", size=1)+
+  geom_col(aes(x= Fecha, y= Casos.diarios, fill= "Casos diarios"), color = "white", size = 0.1) +
+   geom_line(aes(x= Fecha, y= Casos.media.7d, color= "Promedio móvil 7d"), linetype= "solid", size=1)+
+   scale_fill_manual(name="", values= c("Casos diarios" = "#58bcbc")) + 
+   scale_color_manual(name="", values= c("Promedio móvil 7d" = "#005155")) +
       scale_y_continuous(expand = c(0, 0)) +
       scale_x_date(expand=c(0,0)) +
        theme_minimal() +
@@ -170,14 +174,18 @@ CasosSon <- ggplot(Sonora.DF) +
 ```
 
 ```{r}
-ggplotly(CasosSon)
+ggplotly(CasosSon, tooltip = c("x", "y")) %>%
+  layout(legend = list(orientation = "h",
+                   y = 80, x = 0))
 ```
 
-### **Decesos diarios**
+### **Decesos confirmados diariamente**
 ```{r, include=FALSE}
 DecesosSon <- ggplot(Sonora.DF) +
-  geom_col(aes(x= Fecha, y= Decesos.diarios), fill= "#E0A3C1", color = "white") +
-   geom_line(aes(x= Fecha, y= Decesos.media.7d), color= "#4D1A33", linetype= "solid", size=1)+
+  geom_col(aes(x= Fecha, y= Decesos.diarios, fill= "Decesos diarios"), color = "white", size = 0.1) +
+   geom_line(aes(x= Fecha, y= Decesos.media.7d, color= "Promedio móvil 7d"), linetype= "solid", size=1)+
+   scale_fill_manual(name="", values= c("Decesos diarios" = "#E0A3C1")) + 
+   scale_color_manual(name="", values= c("Promedio móvil 7d" = "#4D1A33")) +
       scale_y_continuous(expand = c(0, 0)) +
       scale_x_date(expand=c(0,0)) +
        theme_minimal() +
@@ -196,22 +204,25 @@ DecesosSon <- ggplot(Sonora.DF) +
 ```
 
 ```{r}
-ggplotly(DecesosSon)
+ggplotly(DecesosSon, tooltip = c("x", "y")) %>%
+  layout(legend = list(orientation = "h",
+                   y = 80, x = 0))
 ```
 
 Row  {data-height=350}
 -----------------------------------------------------------------------
 
-### **Pacientes curados vs Decesos**
+### **Pacientes curados vs Decesos acumulados**
 ```{r, include=FALSE}
 RecupSon <- ggplot(Sonora.DF) +
-   geom_line(aes(x= Fecha, y= Pacientes_Curados ), color= "#366092", linetype= "solid", size=1)+
-   geom_line(aes(x= Fecha, y= Decesos ), color= "#73264D", linetype= "solid", size=1)+
+   geom_line(aes(x= Fecha, y= Pacientes_Curados, color= "Pacientes curados" ), linetype= "solid", size=1)+
+   geom_line(aes(x= Fecha, y= Decesos, color= "Decesos" ), linetype= "solid", size=1)+
+      scale_color_manual(name="", values= c("Pacientes curados" = "#366092", "Decesos" = "#73264D" ))+
       scale_y_continuous(expand = c(0, 50)) +
       scale_x_date(expand=c(0,0)) +
        theme_minimal() +
     theme(
-    legend.position = "top",
+    legend.position = "left",
      panel.background = element_rect(fill= "gray95"),
     axis.text.y = element_text(family = "Lato", size = 10, color = "black"),
     axis.text.x = element_text(family = "Lato", size = 10, color = "black"),axis.line = element_line(colour = "black"),
@@ -225,39 +236,18 @@ RecupSon <- ggplot(Sonora.DF) +
 ```
 
 ```{r}
-ggplotly(RecupSon)
+ggplotly(RecupSon, tooltip = c("x", "y")) %>%
+  layout(legend = list(orientation = "h",
+                   y = 80, x = 0))
 ```
 
-### **Pruebas diarias**
-```{r, include=FALSE}
-Pruebasdiarias <- ggplot(Sonora.DF) +
-  geom_col(aes(x= Fecha, y= Pruebas.diarias), fill= "#4BACC6", color = "white") +
-      scale_y_continuous(expand = c(0, 40)) +
-      scale_x_date(expand=c(0,0)) +
-       theme_minimal() +
-    theme(
-    legend.position = "none",
-     panel.background = element_rect(fill= "gray95"),
-    axis.text.y = element_text(family = "Lato", size = 10, color = "black"),
-    axis.text.x = element_text(family = "Lato", size = 10, color = "black"),axis.line = element_line(colour = "black"),
-    panel.grid.major.y = element_line(color="white"), 
-    panel.grid.minor.y = element_line(color="white"),
-    panel.grid.major.x = element_blank(),
-    panel.grid.minor.x = element_blank(),
-    axis.title = element_text(family = "Lato", size = 8)) + 
-    labs(y = NULL, x = NULL) 
-
-```
-
-```{r}
-ggplotly(Pruebasdiarias)
-```
-
-### **Gravedad**
+### **Hospitalizados**
 ```{r, include=FALSE}
 Gravgraf <- ggplot(Sonora.DF) +
-  geom_area(aes(x= Fecha, y= Hospitalizados), fill= "#FABF8F", color = "#E26B0A", size= 1, alpha=0.75) +
-  geom_area(aes(x= Fecha, y= Graves), fill= "#F79646") +
+  geom_area(aes(x= Fecha, y= Hospitalizados, fill = "Hospitalizados"), color = "#E26B0A", size= 1, alpha=0.75) +
+  geom_area(aes(x= Fecha, y= Graves, fill= "Graves")) +
+    geom_area(aes(x= Fecha, y= Intubado, fill= "Intubados")) +
+    scale_fill_manual(name="", values= c("Hospitalizados" = "#FABF8F", "Graves" = "#E26B0A", "Intubados" = "#974706"  )) +
       scale_y_continuous(expand = c(0, 40)) +
       scale_x_date(expand=c(0,0)) +
        theme_minimal() +
@@ -275,9 +265,40 @@ Gravgraf <- ggplot(Sonora.DF) +
 ```
 
 ```{r}
-ggplotly(Gravgraf)
+ggplotly(Gravgraf, tooltip = c("x", "y")) %>%
+  layout(legend = list(orientation = "h",
+                   y = 80, x = 0))
 ```
 
+### **Pruebas diarias**
+```{r, include=FALSE}
+Pruebasdiarias <- ggplot(Sonora.DF) +
+  geom_col(aes(x= Fecha, y= Pruebas.diarias, fill= "Pruebas diarias"), color = "white", size= 0.2) +
+  geom_line(aes(x= Fecha, y= Pruebas.media.7d, color= "Promedio móvil 7d"), linetype= "solid", size=1)+
+   scale_fill_manual(name="", values= c("Pruebas diarias" = "#4BACC6")) + 
+   scale_color_manual(name="", values= c("Promedio móvil 7d" = "#31869B")) +    
+  scale_y_continuous(expand = c(0, 40)) +
+      scale_x_date(expand=c(0,0)) +
+       theme_minimal() +
+    theme(
+    legend.position = "none",
+     panel.background = element_rect(fill= "gray95"),
+    axis.text.y = element_text(family = "Lato", size = 10, color = "black"),
+    axis.text.x = element_text(family = "Lato", size = 10, color = "black"),axis.line = element_line(colour = "black"),
+    panel.grid.major.y = element_line(color="white"), 
+    panel.grid.minor.y = element_line(color="white"),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank(),
+    axis.title = element_text(family = "Lato", size = 8)) + 
+    labs(y = NULL, x = NULL) 
+
+```
+
+```{r}
+ggplotly(Pruebasdiarias, tooltip = c("x", "y")) %>%
+  layout(legend = list(orientation = "h",
+                   y = 80, x = 0))
+```
 
 Casos acumulados
 ===================================== 
@@ -306,7 +327,7 @@ Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = CASOS, tooltip=capa_munison_casos$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,5700), breaks = c(1, 1000, 2000, 3000, 4000, 5000))+
+    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,6200), breaks = c(1, 1000, 2000, 3000, 4000, 5000, 6000))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -330,7 +351,7 @@ Casos_map_ani <- girafe(code = print(Mapa_casos),
 Casos_map_ani 
 ```
 
-### **Casos acumulados al 17 de julio de 2020**
+### **Casos acumulados al 19 de julio de 2020**
 
 ```{r, include=FALSE}
 CasosCol <- ggplot(casosacumdiaorder) +
@@ -338,7 +359,7 @@ CasosCol <- ggplot(casosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,5700), breaks = c(1, 1000, 2000, 3000, 4000, 5000)) +
+   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,6200), breaks = c(1, 1000, 2000, 3000, 4000, 5000, 6000)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -405,7 +426,7 @@ Casos_ult_ani <- girafe(code = {print(Mapa_ult)},
 Casos_ult_ani 
 ```
 
-### **Días desde el último caso confirmado (corte al 17/07/2020)**  {data-width=500}
+### **Días desde el último caso confirmado (corte al 19/07/2020)**  {data-width=500}
 
 ```{r, include=FALSE}
 casos_ult_dias_order <- arrange(casos_ult_dias,Dias_ult, desc(MUNICIPIO))
@@ -457,7 +478,7 @@ Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = DECESOS, tooltip=capa_munison_decesos$tooltip, data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,390), breaks = c(1, 50, 100, 150, 200, 250,300,350))+
+    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,410), breaks = c(1, 50, 100, 150, 200, 250,300,350,400))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -481,7 +502,7 @@ Decesos_map_ani <- girafe(code = print(Mapa_decesos),
 Decesos_map_ani 
 ```
 
-### **Decesos acumulados al 17 de julio de 2020** {data-width=500}
+### **Decesos acumulados al 19 de julio de 2020** {data-width=500}
 
 ```{r, include=FALSE}
 
@@ -490,7 +511,7 @@ DecesosCol <- ggplot(decesosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,390), breaks = c(1, 50, 100, 150, 200, 250,300,350)) +
+   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,410), breaks = c(1, 50, 100, 150, 200, 250,300,350,400)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -511,14 +532,55 @@ geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5,
 DecesosCol
 ```
 
-Evolución diaria
+Evolución
 ===================================== 
 
 Row {.tabset}
 -----------------------------------------------------------------------
-### **Casos diarios**
+### **Casos semanales**
+```{r}
+Casossemana <- Casos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
+Casossem <- group_by(Casossemana, MUNICIPIO, Reporte) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS))
+Casos_Semanales <- ggplot(subset(Casossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
+    geom_col(mapping = aes(x = Reporte, y = `CASOS SEMANALES`, fill = `CASOS SEMANALES`, label= ACUMULADOS)) +
+    scale_fill_gradient(low = "#58BCBC", high = "black") + 
+    facet_wrap(~ MUNICIPIO, scales = "free_y") + 
+    theme(axis.line = element_line(linetype = "solid"), plot.margin = margin(1, 3, 1, 3, "cm"),
+          plot.title = (element_text(family = "Lato Black", size = 30)),
+          strip.text = element_text(family = "Lato Black", size = 16),
+          axis.text = element_text(family = "Lato", size =10),
+          panel.grid.major = element_line(colour = "white"), 
+          panel.grid.minor = element_line(colour = "white"), 
+          axis.title = element_text(family = "Lato", size = 15),
+          panel.background = element_rect(fill = "gray95"), 
+          legend.position = "none") +labs(y = NULL, x = NULL, title  = NULL) + 
+  theme(panel.grid.major = element_line(colour = "white"), panel.grid.minor = element_line(colour = "white"),                                   panel.background = element_rect(fill = "gray95"),legend.position = "none",  panel.margin.y = unit(0, "lines"), panel.margin.x = unit(0,"lines"))
+ggplotly(Casos_Semanales, tooltip = c("y","label", "x"))
+```
 
-```{r, include=FALSE}
+### **Decesos semanales**
+```{r}
+Decesossemana <- Decesos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
+Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) 
+Decesos_Semanales <- ggplot(subset(Decesossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
+    geom_col(mapping = aes(x = Reporte, y = `DECESOS SEMANALES`, fill = `DECESOS SEMANALES`, label= ACUMULADOS)) +
+    scale_fill_gradient(low = "#993366", high = "black") +
+    facet_wrap(~ MUNICIPIO, scales = "free_y") + 
+    theme(axis.line = element_line(linetype = "solid"), plot.margin = margin(1, 3, 1, 3, "cm"), 
+          plot.title = (element_text(family = "Lato Black", size = 30)),
+          strip.text = element_text(family = "Lato Black", size = 16),
+          axis.text = element_text(family = "Lato", size =10),
+          panel.grid.major = element_line(colour = "white"), 
+          panel.grid.minor = element_line(colour = "white"), 
+          axis.title = element_text(family = "Lato", size = 15),
+          panel.background = element_rect(fill = "gray95"), 
+          legend.position = "none") +labs(y = NULL, x = NULL, title  = NULL) + 
+  theme(panel.grid.major = element_line(colour = "white"), panel.grid.minor = element_line(colour = "white"),                                   panel.background = element_rect(fill = "gray95"),legend.position = "none",  panel.margin.y = unit(0, "lines"), panel.margin.x = unit(0,"lines"))
+ggplotly(Decesos_Semanales, tooltip = c("y", "label", "x"))
+```
+
+### **Casos diarios**
+```{r }
 Casos$NUEVOS[Casos$NUEVOS == 0] <- NA
 Casos_Todos <- ggplot(data = Casos) +
       geom_tile(mapping = aes(x = Fecha, y = MUNICIPIO, fill = NUEVOS, text = paste(
@@ -537,16 +599,12 @@ Casos_Todos <- ggplot(data = Casos) +
     plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50", face = "italic"),
     axis.title = element_text(family = "Lato", size = 8)) +
     labs(y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración propia con información de la Secretaría de Salud del Estado de Sonora")
-Casos_anim <- ggplotly(Casos_Todos)
-```
-
-```{r }
-Casos_anim
+ggplotly(Casos_Todos)
 ```
 
 ### **Decesos diarios**
 
-```{r, include=FALSE}
+```{r }
 Decesos$NUEVOS[Decesos$NUEVOS == 0] <- NA
 Decesos_Todos <- ggplot(data = Decesos) +
       geom_tile(mapping = aes(x = Fecha, y = MUNICIPIO, fill = NUEVOS, text = paste(
@@ -566,17 +624,12 @@ Decesos_Todos <- ggplot(data = Decesos) +
     plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50", face = "italic"),
     axis.title = element_text(family = "Lato", size = 8)) +
     labs(y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración propia con información de la Secretaría de Salud del Estado de Sonora")
-Decesos_anim <- ggplotly(Decesos_Todos)
-```
-
-
-```{r}
-Decesos_anim
+ggplotly(Decesos_Todos)
 ```
 
 Indicadores
 =====================================
-**Al 17 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
+**Al 19 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
 ```{r}
 POBMUN <- read_csv("POBMUN.csv", col_types = cols(CVEGEO = col_character()))
 casos_pal <- function(x) rgb(colorRamp(c("#EAF6F6", "#7FCDCB"))(x), maxColorValue = 255)
