--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -170,7 +170,6 @@ CasosSon <- ggplot(Sonora.DF) +
     panel.grid.minor.x = element_blank(),
     axis.title = element_text(family = "Lato", size = 8)) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -200,7 +199,6 @@ DecesosSon <- ggplot(Sonora.DF) +
     panel.grid.minor.x = element_blank(),
     axis.title = element_text(family = "Lato", size = 8)) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -232,7 +230,6 @@ RecupSon <- ggplot(Sonora.DF) +
     panel.grid.minor.x = element_blank(),
     axis.title = element_text(family = "Lato", size = 8)) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -291,7 +288,6 @@ Pruebasdiarias <- ggplot(Sonora.DF) +
     panel.grid.minor.x = element_blank(),
     axis.title = element_text(family = "Lato", size = 8)) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -320,14 +316,13 @@ capa_munison_casos<- inner_join(capa_munison_df, casosacumdia2, by="id")
 
 ```{r, include=FALSE}
 capa_munison_casos$tooltip <- c(paste0("<b>",capa_munison_casos$MUNICIPIO, "</b>", "<b>","\n Casos ", "</b>", capa_munison_casos$CASOS,"</b>", "<b>","\n Nuevos ", "</b>", capa_munison_casos$NUEVOS))
-
 Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
                geom_polygon(data=capa_son, aes(x=long, y=lat, group=group), 
                fill="transparent", color="black", size=1) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = CASOS, tooltip=capa_munison_casos$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,6200), breaks = c(1, 1000, 2000, 3000, 4000, 5000, 6000))+
+    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,6500), breaks = c(1, 1000, 2000, 3000, 4000, 5000, 6000))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -338,7 +333,6 @@ Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
     axis.title = element_blank()) +
     labs(axis = NULL, y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora")
  
-
 ```
 
 ```{r, include=FALSE}
@@ -351,7 +345,7 @@ Casos_map_ani <- girafe(code = print(Mapa_casos),
 Casos_map_ani 
 ```
 
-### **Casos acumulados al 19 de julio de 2020**
+### **Casos acumulados al 20 de julio de 2020**
 
 ```{r, include=FALSE}
 CasosCol <- ggplot(casosacumdiaorder) +
@@ -359,7 +353,7 @@ CasosCol <- ggplot(casosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,6200), breaks = c(1, 1000, 2000, 3000, 4000, 5000, 6000)) +
+   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,6500), breaks = c(1, 1000, 2000, 3000, 4000, 5000, 6000)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -373,7 +367,6 @@ geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1
     axis.title = element_text(family = "Lato", size = 8),
     plot.margin=unit(c(0,2,0,0),"cm")) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -393,9 +386,7 @@ capa_ult_dias<- inner_join(capa_munison_df, casos_ult_dias, by="id")
 
 ```{r, include=FALSE}
 capa_ult_dias$tooltip <- c(paste0("<b>",capa_ult_dias$MUNICIPIO, "</b>", "<b>","\n Último caso ", "</b>", capa_ult_dias$Fecha,"</b>", "<b>","\n Días ", "</b>", capa_ult_dias$Dias_ult))
-
 discreta <- c("1" = "#A04A69", "2" = "#ECA48E","3" = "#FECF7D","4" = "#0397A1", "5" = "#215968")
-
 Mapa_ult <- ggplot(capa_ult_dias, aes(map_id = id)) +
                geom_polygon(data=capa_son, aes(x=long, y=lat, group=group), 
                fill="transparent", color="black", size=1) +
@@ -412,7 +403,6 @@ Mapa_ult <- ggplot(capa_ult_dias, aes(map_id = id)) +
     axis.title = element_blank()) +
     labs(axis = NULL, y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora", fill = "Días desde que se confirmó el último caso")
  
-
 ```
 
 ```{r, include=FALSE}
@@ -426,11 +416,10 @@ Casos_ult_ani <- girafe(code = {print(Mapa_ult)},
 Casos_ult_ani 
 ```
 
-### **Días desde el último caso confirmado (corte al 19/07/2020)**  {data-width=500}
+### **Días desde el último caso confirmado (corte al 20/07/2020)**  {data-width=500}
 
 ```{r, include=FALSE}
 casos_ult_dias_order <- arrange(casos_ult_dias,Dias_ult, desc(MUNICIPIO))
-
 Casos_ultCol <- ggplot(casos_ult_dias_order) +
     geom_col(aes(x = fct_inorder(MUNICIPIO), y = Dias_ult, fill = factor(clasfdias)), color = "white") + 
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = Dias_ult, label=Dias_ult, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
@@ -450,7 +439,6 @@ Casos_ultCol <- ggplot(casos_ult_dias_order) +
     axis.title = element_text(family = "Lato", size = 8),
     plot.margin=unit(c(0,2,0,0),"cm")) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -471,7 +459,6 @@ capa_munison_decesos<- inner_join(capa_munison_df, decesosacumdia2, by="id")
 
 ```{r, include=FALSE}
 capa_munison_decesos$tooltip <- c(paste0("<b>",capa_munison_decesos$MUNICIPIO, "</b>", "<b>","\n Decesos ", "</b>", capa_munison_decesos$DECESOS,"</b>", "<b>","\n Nuevos ", "</b>", capa_munison_decesos$NUEVOS))
-
 Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
                geom_polygon(data=capa_son, aes(x=long, y=lat, group=group), 
                fill="transparent", color="black", size= 1) +
@@ -489,7 +476,6 @@ Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
     axis.title = element_blank()) +
     labs(axis = NULL, y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora")
  
-
 ```
 
 ```{r, include=FALSE}
@@ -502,10 +488,9 @@ Decesos_map_ani <- girafe(code = print(Mapa_decesos),
 Decesos_map_ani 
 ```
 
-### **Decesos acumulados al 19 de julio de 2020** {data-width=500}
+### **Decesos acumulados al 20 de julio de 2020** {data-width=500}
 
 ```{r, include=FALSE}
-
 DecesosCol <- ggplot(decesosacumdiaorder) +
     geom_col(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, fill = DECESOS), color = "white") + 
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
@@ -525,7 +510,6 @@ geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5,
     axis.title = element_text(family = "Lato", size = 8),
     plot.margin=unit(c(0,2,0,0),"cm")) + 
     labs(y = NULL, x = NULL) 
-
 ```
 
 ```{r}
@@ -540,7 +524,7 @@ Row {.tabset}
 ### **Casos semanales**
 ```{r}
 Casossemana <- Casos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Casossem <- group_by(Casossemana, MUNICIPIO, Reporte) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS))
+Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS)) %>% filter(Semana != 30)
 Casos_Semanales <- ggplot(subset(Casossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
     geom_col(mapping = aes(x = Reporte, y = `CASOS SEMANALES`, fill = `CASOS SEMANALES`, label= ACUMULADOS)) +
     scale_fill_gradient(low = "#58BCBC", high = "black") + 
@@ -561,7 +545,7 @@ ggplotly(Casos_Semanales, tooltip = c("y","label", "x"))
 ### **Decesos semanales**
 ```{r}
 Decesossemana <- Decesos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) 
+Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) %>% filter(Semana != 30)
 Decesos_Semanales <- ggplot(subset(Decesossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
     geom_col(mapping = aes(x = Reporte, y = `DECESOS SEMANALES`, fill = `DECESOS SEMANALES`, label= ACUMULADOS)) +
     scale_fill_gradient(low = "#993366", high = "black") +
@@ -634,7 +618,6 @@ Indicadores
 POBMUN <- read_csv("POBMUN.csv", col_types = cols(CVEGEO = col_character()))
 casos_pal <- function(x) rgb(colorRamp(c("#EAF6F6", "#7FCDCB"))(x), maxColorValue = 255)
 decesos_pal <- function(x) rgb(colorRamp(c("#FBF3F7", "#E0A3C1"))(x), maxColorValue = 255)
-
 decesosacumdia3 <- rename(decesosacumdia,'DECESOS NUEVOS'=NUEVOS)
 casosacumdia3 <- rename(casosacumdia,'CASOS NUEVOS'=NUEVOS)
 casosdecesos <-left_join(casosacumdia3, decesosacumdia3,by = c("CVEGEO","Fecha","MUNICIPIO"))
@@ -727,3 +710,4 @@ Código del proyecto: [Covid19-Sonora-Municipios](https://github.com/dogomoreno/
 [Plataforma Covid-19 del Departamento de Matemáticas de la Universidad de Sonora] (https://covid19data.unison.mx/)
 
 [www.luisarmandomoreno.com](www.luisarmandomoreno.com)
+
